objects/QUESTION_AND_ANSWER__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>ANSWER__c</fullName>
        <label>Answer</label>
        <length>64000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ATTACHMENT2__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>ATTACHMENT3__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>ATTACHMENT4__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <label>CreatedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ENVIRONMENT__c</fullName>
        <label>Environment</label>
        <length>64000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>INTERNAL_NOTES__c</fullName>
        <label>Internal Notes</label>
        <length>64000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QUESTION_DETAIL__c</fullName>
        <label>Question Detail</label>
        <length>64000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_Articles__c</fullName>
        <label>Related Articles</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SUPPLEMENTAL_INFORMATION__c</fullName>
        <label>Supplemental Information</label>
        <length>64000</length>
        <type>Html</type>
    </fields>
    <label>Question and Answer</label>
    <pluralLabel>Questions and Answers</pluralLabel>
</CustomObject>